kubernetes/apps/flux-system/flux-operator/instance/webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.smbonn.me"
spec:
  ingressClassName: external
  rules:
    - host: &host "flux-webhook.smbonn.me"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
